# etiquette3D

./: .gitignore  CMakeLists.txt  DiagrammeQuiNeMarchePas.xml  README.md  pgrou.uml
ProgrammeTest/: lgNode.cpp
doc/: DiagrammeClasse.uml  modelMakefile.txt  modelMakefile.txt~
github/: lgNode.h  main.cpp
include/: Evaluator.h  InExSwitch.h  InternalLabelAnimation.h  LGAnimation.h  LGInteraction.h  LabelVisitor.h  MovingCallback.h  PickHandler.h  lgAnimation.h  lgInteraction.h  lgLabel.h  lgNode.h  lgNodeOverseer.h  lgNodeVisitor.h  myLGAnimation.h  myLGAnimation2.h  test.h  testLGAnimation.h
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
src/: Evaluator.cpp  InExSwitch.cpp  InternalLabelAnimation.cpp  LGAnimation.cpp  LGInteraction.cpp  LabelVisitor.cpp  MovingCallback.cpp  PickHandler.cpp  lgAnimation.cpp  lgInteraction.cpp  lgLabel.cpp  lgNode.cpp  lgNodeOverseer.cpp  lgNodeVisitor.cpp  main.cpp  myLGAnimation.cpp  myLGAnimation2.cpp  myMain.cpp  test.cpp  testLGAnimation.cpp
